@@ -4,7 +4,10 @@ ChangeLog for pommed
 version 1.26:
 	- pommed: only keystrokes on the built-in keyboard should reset
 	the keyboard idle timer.
-	- pommed: add USB IDs for the Apple external aluminium mini keyboard.
+	- pommed: add USB IDs for the Apple external aluminium mini
+	keyboard.
+	- pommed: switch to sysfs resource files for PCI memory access
+	instead of mmaping /dev/mem.
 
 version 1.25:
 	- pommed: check current hardware backlight level before setting AC
